network-policies/allow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-team-a
  namespace: team-a
spec:
  podSelector:
    matchLabels:
     app: team-a-app
  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
           kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
           app: prometheus
         
    ports: 
    - protocol: TCP
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-team-b
  namespace: team-b
spec:
  podSelector:
    matchLabels:
     app: team-b-app
  policyTypes:
  - Ingress
 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
           kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
           app: prometheus
         
    ports: 
    - protocol: TCP
      port: 9090
