network-policies/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
  namespace: team-a
spec:
  podSelector:
    matchLabels:
     app: team-a-app
  policyTypes:
  - Ingress
